feature:viviendas se añadieron los endpoints hasta ahora funcionan todos menos 2 se estan arreglando
